cmake_minimum_required(VERSION 3.22)
project(KeenCPPTest_all)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_BUILD_TYPE Debug)

include_directories(1技巧/头)
include_directories(1技巧/头/栈-数组)
include_directories(1技巧/头/栈-链表)
include_directories(1技巧/头/线性表-数组)
include_directories(1技巧/头/线性表-链表)
include_directories(三级项目五/一个头文件，一个cpp)
include_directories(三级项目五/三个头文件，四个cpp)
include_directories(并查集/新建文件夹)
include_directories(有向无权图)
include_directories(算法实验上机/算法实验上机/代码/2/算法第二次实验)
include_directories(算法实验上机/算法实验上机/代码/3/算法第三次实验)
include_directories(算法实验上机/算法实验上机/代码/4/算法第四次实验)
include_directories(算法实验上机/算法实验上机/代码/5/第五次算法实验)
include_directories(算法实验上机/算法实验上机/代码/6/第六次算法实验)
include_directories(算法实验上机/算法实验上机/代码/7/第七次算法实验)
include_directories(算法实验上机/算法实验上机/代码/8/算法第八次实验)

add_executable(getTime utils/timeUtils/getTime.cpp)
set_target_properties(getTime PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/utils/timeUtils/")